# reports-service-v2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: config.py  handlers.py  helpers.py  logger.py  main.py  publish.py  time_helpers.py
src/application/enums/: __init__.py  output_event_types.py  queue_names.py
src/connections/: __init__.py  auth_credentials_storage.py  dodo_is_api.py  units_storage.py
src/dependencies/: __init__.py  auth_credentials_storage.py  dodo_is_api.py  units_storage.py
src/domain/production/: models.py  services.py
src/enums/: __init__.py  country_codes.py  error_codes.py  late_delivery_voucher_issuers.py  staff_types.py
src/exceptions/: __init__.py  auth_credentials.py  parsers.py
src/handlers/: __init__.py  late_delivery_vouchers.py  router.py  sales_statistics.py  staff_members_birthdays.py
src/interactors/: __init__.py  auth_credentials.py  productivity_statistics.py  staff_members_birthdays.py  units_sales.py
src/models/: __init__.py  auth_credentials.py  dodo_is_api.py  events.py  fetch_results.py  reports.py  units.py
src/models/dodo_is_api/: __init__.py  delivery_statistics.py  late_delivery_vouchers.py
src/new_types/: __init__.py  http_clients.py
src/parsers/: __init__.py  auth_credentials.py  base.py  common.py  dodo_is_api.py  units.py
src/services/: __init__.py  late_delivery_vouchers.py
tests/test_parsers/test_base_parsers/: test_json_parser.py
tests/test_parsers/test_dodo_is_api_parsers/: test_parse_production_productivity_parser.py  test_parse_units_sales_for_period_response.py
